@@ -144,15 +144,15 @@ void Config::addOption(string var, string val)
             mainwindow_position = GTK_WIN_POS_NONE;
         }
     } else if (var == "mainwindow_xoffset") {
-	stringstream convert(val);
-	if (!(convert >> mainwindow_xoffset)) {
-		mainwindow_xoffset = 0;
-	}
+        stringstream convert(val);
+        if (!(convert >> mainwindow_xoffset)) {
+            mainwindow_xoffset = 0;
+        }
     }  else if (var == "mainwindow_yoffset") {
         stringstream convert(val);
         if (!(convert >> mainwindow_yoffset)) {
-	    mainwindow_yoffset = 0;
-	}
+            mainwindow_yoffset = 0;
+        }
     } else if (var == "mainwindow_resizable") {
         if (!fromString<bool>(mainwindow_resizable, val)) {
             mainwindow_resizable = true;
@@ -171,6 +171,8 @@ void Config::addOption(string var, string val)
         if (!fromString<bool>(close_on_unfocus, val)) {
             close_on_unfocus = false;
         }
+    } else if (var == "force_lang") {
+        force_lang = val;
     }
 }
 
